# custom-controller

./: .gitignore  Cargo.toml  ENGINEERING_PLAN.md  HARDWARE.md  README.md  SKILL_DOCS.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: board.rs  main.rs
src/adc/: joystick.rs  mod.rs
src/app/: mod.rs
src/input/: buttons.rs  mod.rs
src/protocol/: mod.rs  telemetry.rs
src/uart/: host_tx.rs  mod.rs  sensor_ports.rs
