[package]
name = "custom-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "custom-controller"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Core
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

static_cell = "2"

# Embassy async runtime
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "tick-hz-32_768"] }

# STM32 HAL (Embassy)
embassy-stm32 = { version = "0.2", features = [
  "stm32f446re",
  "time-driver-tim2",
  "exti",
  "unstable-pac",
  "defmt",
] }

# Logging / panic
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[profile.dev]
opt-level = 1
lto = false

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
